--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,14 @@
+
+@import url('./fonts.css');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+  font-family: 'Poppins', ui-sans-serif, system-ui, sans-serif;
+}
+
+
 
 /* Enhanced Hindu-themed Animations */
 @keyframes float-right {
